--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 #SQL
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.format_sql=true
 spring.main.allow-circular-references = true
