implementando spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,11 @@ spring.jpa.hibernate.ddl-auto=update
 #SQL
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+#Override
 spring.main.allow-circular-references = true
+#Emails
+disney.email.sender=juanem@hotmail.com
+disney.email.enabled=true
+#Swagger
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
